# Connect4

./: .travis.yml  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.obsidian/: workspace.json
Connect4/.obsidian/: workspace.json
src/: board.rs  input_handlers.rs  main.rs  menu.rs  players.rs
