[package]
name = "connect4"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
array2d = "0.3.2"
inline_colorization = "0.1.6"
bevy-inspector-egui = { version = "0.25.2", features = ["highlight_changes"] }
bevy = { version = "0.14.1", features = ["wayland"] }
